docs: add tenant find docs
